--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This is the 1.13+ version of ControlerBlockWE.
 
-Authors: Original by Hell_Fire. Updates by: Zero9195, Sorklin, Techzune and Me_Goes_RAWR.
+Original Author: Hell_Fire. Updates by: Zero9195, Sorklin, Techzune and Me_Goes_RAWR.
 
 Requires:
   - Worldedit
